/credentials: Displays credential file info
- used highlight.js to render the yaml

--- a/.gitignore
+++ b/.gitignore
@@ -32,4 +32,4 @@
 /public/assets
 
 # Ignore master key for decrypting credentials and more.
-/config/master.key
+# Decided NOT to ignore master.key, because this app helps test how that works
